--- a/dev/index.html
+++ b/dev/index.html
@@ -15,10 +15,10 @@ Pkg.add(&quot;StructuralIdentifiability&quot;)</code></pre><h2 id="Citation"><a 
   pages   = {194-235}
 }</code></pre><h2 id="Feature-Summary"><a class="docs-heading-anchor" href="#Feature-Summary">Feature Summary</a><a id="Feature-Summary-1"></a><a class="docs-heading-anchor-permalink" href="#Feature-Summary" title="Permalink"></a></h2><p><code>StructuralIdentifiability.jl</code> can assess local and global identifiability of ODE models. In addition to these straightforward identifiability queries on individual parameters, the package can distinguish between single- and multi-experiment identifiability.</p><h2 id="Feature-List"><a class="docs-heading-anchor" href="#Feature-List">Feature List</a><a id="Feature-List-1"></a><a class="docs-heading-anchor-permalink" href="#Feature-List" title="Permalink"></a></h2><ul><li>Local identifiability checks</li><li>Global identifiability checks</li><li>Assessment of identifiable functions of parameters and states</li><li>Model reparametrization (experimental)</li></ul><h2 id="External-tutorials"><a class="docs-heading-anchor" href="#External-tutorials">External tutorials</a><a id="External-tutorials-1"></a><a class="docs-heading-anchor-permalink" href="#External-tutorials" title="Permalink"></a></h2><p>A <a href="https://arxiv.org/abs/2505.10517">tutorial paper</a> describes some of the functionality (identifiability assessment and finding identifiable functions) in the context of epidemiological modeling (tested with the version 0.5.15 of the package).</p><h2 id="Contributing"><a class="docs-heading-anchor" href="#Contributing">Contributing</a><a id="Contributing-1"></a><a class="docs-heading-anchor-permalink" href="#Contributing" title="Permalink"></a></h2><ul><li><p>Please refer to the <a href="https://github.com/SciML/ColPrac/blob/master/README.md">SciML ColPrac: Contributor&#39;s Guide on Collaborative Practices for Community Packages</a> for guidance on PRs, issues, and other matters relating to contributing to StructuralIdentifiability.</p></li><li><p>There are a few community forums:</p><ul><li>The #diffeq-bridged channel in the <a href="https://julialang.org/slack/">Julia Slack</a></li><li><a href="https://gitter.im/JuliaDiffEq/Lobby">JuliaDiffEq</a> on Gitter</li><li>On the Julia Discourse forums</li><li>See also <a href="https://sciml.ai/community/">SciML Community page</a></li></ul></li></ul><h2 id="Reproducibility"><a class="docs-heading-anchor" href="#Reproducibility">Reproducibility</a><a id="Reproducibility-1"></a><a class="docs-heading-anchor-permalink" href="#Reproducibility" title="Permalink"></a></h2><details><summary>The documentation of this SciML package was built using these direct dependencies,</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Status `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl/docs/Project.toml`
   [6e4b80f9] BenchmarkTools v1.6.3
-  [e30172f5] Documenter v1.15.0
-  [961ee093] ModelingToolkit v10.26.1
-  [220ca800] StructuralIdentifiability v0.5.17 `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl`</code></pre></details><details><summary>and using this machine and Julia version.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Julia Version 1.12.1
-Commit ba1e628ee49 (2025-10-17 13:02 UTC)
+  [e30172f5] Documenter v1.16.1
+  [961ee093] ModelingToolkit v10.29.0
+  [220ca800] StructuralIdentifiability v0.5.17 `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl`</code></pre></details><details><summary>and using this machine and Julia version.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Julia Version 1.12.2
+Commit ca9b6662be4 (2025-11-20 16:25 UTC)
 Build Info:
   Official https://julialang.org release
 Platform Info:
@@ -28,21 +28,21 @@ Platform Info:
   LLVM: libLLVM-18.1.7 (ORCJIT, znver3)
   GC: Built with stock GC
 Threads: 1 default, 1 interactive, 1 GC (on 4 virtual cores)</code></pre></details><details><summary>A more complete overview of all dependencies and their versions is also provided.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Status `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl/docs/Manifest.toml`
-  [47edcb42] ADTypes v1.18.0
+  [47edcb42] ADTypes v1.19.0
   [a4c015fc] ANSIColoredPrinters v0.0.1
-  [c3fe647b] AbstractAlgebra v0.47.3
+  [c3fe647b] AbstractAlgebra v0.47.4
   [1520ce14] AbstractTrees v0.4.5
   [7d9f7c33] Accessors v0.1.42
   [79e6a3ab] Adapt v4.4.0
   [66dad0bd] AliasTables v1.1.3
   [ec485272] ArnoldiMethod v0.4.0
   [4fba245c] ArrayInterface v7.22.0
-  [4c555306] ArrayLayouts v1.12.0
+  [4c555306] ArrayLayouts v1.12.1
   [a9b6321e] Atomix v1.1.2
   [6e4b80f9] BenchmarkTools v1.6.3
   [e2ed5e7c] Bijections v0.2.2
   [62783981] BitTwiddlingConvenienceFunctions v0.1.6
-  [8e7c35d0] BlockArrays v1.9.1
+  [8e7c35d0] BlockArrays v1.9.3
   [70df07ce] BracketingNonlinearSolve v1.6.0
   [2a0fbf3d] CPUSummary v0.2.7
   [d360d2e6] ChainRulesCore v1.26.0
@@ -61,21 +61,21 @@ Threads: 1 default, 1 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [adafc99b] CpuId v0.3.1
   [9a962f9c] DataAPI v1.16.0
   [864edb3b] DataStructures v0.19.3
-  [2b5f629d] DiffEqBase v6.190.2
+  [2b5f629d] DiffEqBase v6.192.0
   [459566f4] DiffEqCallbacks v4.10.1
   [77a26b50] DiffEqNoiseProcess v5.24.1
   [163ba53b] DiffResults v1.1.0
   [b552c78f] DiffRules v1.15.1
-  [a0c0ee7d] DifferentiationInterface v0.7.10
+  [a0c0ee7d] DifferentiationInterface v0.7.12
   [8d63f2c5] DispatchDoctor v0.4.26
   [31c24e10] Distributions v0.25.122
   [ffbed154] DocStringExtensions v0.9.5
-  [e30172f5] Documenter v1.15.0
+  [e30172f5] Documenter v1.16.1
   [5b8099bc] DomainSets v0.7.16
   [7c1d4256] DynamicPolynomials v0.6.4
   [06fc5a27] DynamicQuantities v1.10.0
   [4e289a0a] EnumX v1.0.5
-  [f151be2c] EnzymeCore v0.8.15
+  [f151be2c] EnzymeCore v0.8.17
   [e2ba6199] ExprTools v0.1.10
   [55351af7] ExproniconLite v0.10.14
   [7034ab61] FastBroadcast v0.3.5
@@ -85,7 +85,7 @@ Threads: 1 default, 1 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [64ca27bc] FindFirstFunctions v1.4.2
   [6a86dc24] FiniteDiff v2.29.0
   [1fa38f19] Format v1.3.7
-  [f6369f11] ForwardDiff v1.2.2
+  [f6369f11] ForwardDiff v1.3.0
   [069b7b12] FunctionWrappers v1.1.3
   [77dc65aa] FunctionWrappersWrappers v0.1.3
   [46192b85] GPUArraysCore v0.2.0
@@ -94,28 +94,28 @@ Threads: 1 default, 1 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [86223c79] Graphs v1.13.1
   [0b43b601] Groebner v0.10.0
   [34004b35] HypergeometricFunctions v0.3.28
-⌅ [b5f81e59] IOCapture v0.2.5
+  [b5f81e59] IOCapture v1.0.0
   [615f187c] IfElse v0.1.1
   [3263718b] ImplicitDiscreteSolve v1.2.0
   [d25df0c9] Inflate v0.1.5
   [18e54dd8] IntegerMathUtils v0.1.3
-  [8197267c] IntervalSets v0.7.11
+  [8197267c] IntervalSets v0.7.13
   [3587e190] InverseFunctions v0.1.17
   [92d709cd] IrrationalConstants v0.2.6
   [c8e1da08] IterTools v1.10.0
   [82899510] IteratorInterfaceExtensions v1.0.0
   [692b3bcd] JLLWrappers v1.7.1
-  [682c06a0] JSON v1.2.0
+  [682c06a0] JSON v1.3.0
   [ae98c720] Jieko v0.2.1
   [98e50ef6] JuliaFormatter v2.2.0
 ⌅ [70703baa] JuliaSyntax v0.4.10
-  [ccbc3e58] JumpProcesses v9.19.1
+  [ccbc3e58] JumpProcesses v9.19.2
   [b964fa9f] LaTeXStrings v1.4.0
   [23fbe1c1] Latexify v0.16.10
   [10f19ff3] LayoutPointers v0.1.17
   [0e77f7df] LazilyInitializedFields v1.3.0
   [87fe0de2] LineSearch v0.1.4
-  [d3d80556] LineSearches v7.4.0
+  [d3d80556] LineSearches v7.4.1
   [2ab3a3ac] LogExpFunctions v0.3.29
   [e6f89c97] LoggingExtras v1.2.0
   [d8e11817] MLStyle v0.4.17
@@ -124,7 +124,7 @@ Threads: 1 default, 1 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [d0879d2d] MarkdownAST v0.1.2
   [bb5d69b7] MaybeInplace v0.1.4
   [e1d29d7a] Missings v1.2.0
-  [961ee093] ModelingToolkit v10.26.1
+  [961ee093] ModelingToolkit v10.29.0
   [2e0e35c7] Moshi v0.3.7
   [46d2c3a1] MuladdMacro v0.2.4
   [102ac46a] MultivariatePolynomials v0.5.13
@@ -132,7 +132,7 @@ Threads: 1 default, 1 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [d41bc354] NLSolversBase v7.10.0
   [77ba4419] NaNMath v1.1.3
   [2edaba10] Nemo v0.52.3
-  [be0214bd] NonlinearSolveBase v2.2.0
+  [be0214bd] NonlinearSolveBase v2.4.0
   [6fe1bfb0] OffsetArrays v1.17.0
   [429524aa] Optim v1.13.2
   [bac558e1] OrderedCollections v1.8.1
@@ -166,10 +166,10 @@ Threads: 1 default, 1 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [7e49a35a] RuntimeGeneratedFunctions v0.5.16
   [9dfe8606] SCCNonlinearSolve v1.6.0
   [94e857df] SIMDTypes v0.1.0
-  [0bca4576] SciMLBase v2.124.0
+  [0bca4576] SciMLBase v2.127.0
   [19f34311] SciMLJacobianOperators v0.1.11
-  [a6db7da4] SciMLLogging v1.4.0
-  [c0aeaf25] SciMLOperators v1.10.0
+  [a6db7da4] SciMLLogging v1.5.0
+  [c0aeaf25] SciMLOperators v1.13.0
   [431bcebd] SciMLPublic v1.0.0
   [53ae85a6] SciMLStructures v1.7.0
   [efcf1570] Setfield v1.1.2
@@ -184,10 +184,10 @@ Threads: 1 default, 1 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [1e83bf80] StaticArraysCore v1.4.4
   [10745b16] Statistics v1.11.1
   [82ae8749] StatsAPI v1.7.1
-  [2913bbd2] StatsBase v0.34.7
+  [2913bbd2] StatsBase v0.34.8
   [4c63d2b9] StatsFuns v1.5.2
   [7792a7ef] StrideArraysCore v0.5.8
-  [ec057cc2] StructUtils v2.5.1
+  [ec057cc2] StructUtils v2.6.0
   [220ca800] StructuralIdentifiability v0.5.17 `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl`
   [2efcf032] SymbolicIndexingInterface v0.3.46
 ⌃ [19f23fe9] SymbolicLimits v0.2.3
@@ -222,7 +222,7 @@ Threads: 1 default, 1 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [2a0f44e3] Base64 v1.11.0
   [ade2ca70] Dates v1.11.0
   [8ba89e20] Distributed v1.11.0
-  [f43a241f] Downloads v1.6.0
+  [f43a241f] Downloads v1.7.0
   [7b1f6079] FileWatching v1.11.0
   [9fa8497b] Future v1.11.0
   [b77e0a4c] InteractiveUtils v1.11.0
@@ -254,20 +254,20 @@ Threads: 1 default, 1 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [4ec0a83e] Unicode v1.11.0
   [e66e0078] CompilerSupportLibraries_jll v1.3.0+1
   [781609d7] GMP_jll v6.3.0+2
-  [deac9b47] LibCURL_jll v8.11.1+1
+  [deac9b47] LibCURL_jll v8.15.0+0
   [e37daf67] LibGit2_jll v1.9.0+0
   [29816b5a] LibSSH2_jll v1.11.3+1
   [3a97d323] MPFR_jll v4.2.2+0
   [14a3606d] MozillaCACerts_jll v2025.5.20
   [4536629a] OpenBLAS_jll v0.3.29+0
   [05823500] OpenLibm_jll v0.8.7+0
-  [458c3c95] OpenSSL_jll v3.5.1+0
+  [458c3c95] OpenSSL_jll v3.5.4+0
   [efcefdf7] PCRE2_jll v10.44.0+1
   [bea87d4a] SuiteSparse_jll v7.8.3+2
   [83775a58] Zlib_jll v1.3.1+2
   [8e850b90] libblastrampoline_jll v5.15.0+0
   [8e850ede] nghttp2_jll v1.64.0+1
-  [3f19e933] p7zip_jll v17.5.0+2
+  [3f19e933] p7zip_jll v17.7.0+0
 Info Packages marked with ⌃ and ⌅ have new versions available. Those with ⌃ may be upgradable, but those with ⌅ are restricted by compatibility constraints from upgrading. To see why use `status --outdated -m`</code></pre></details>You can also download the 
 <a href="">manifest</a> file and the
-<a href="">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="tutorials/creating_ode/">Creating ODE System »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.15.0 on <span class="colophon-date" title="Friday 7 November 2025 06:23">Friday 7 November 2025</span>. Using Julia version 1.12.1.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+<a href="">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="tutorials/creating_ode/">Creating ODE System »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.16.1 on <span class="colophon-date" title="Tuesday 25 November 2025 13:04">Tuesday 25 November 2025</span>. Using Julia version 1.12.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
